--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ img {
 
 .header-page {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -101,6 +102,22 @@ img {
     color: #2e2f42;
     display: block;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link.current {
+    position: relative;
+}
+
+.nav-link.current::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .addr {
@@ -121,12 +138,14 @@ img {
     color: #434455;
     display: block;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus,
 .addr-link:hover,
-.addr-link:focus {
+.addr-link:focus,
+.nav-link.current {
     color: #404bbf;
 }
 
@@ -147,9 +166,12 @@ img {
 
 .hero {
     background-color: #2e2f42;
-    /* display: flex; */
-    /* align-items: center; */
-
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* min-width: 1440px; */
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .hero-btn {
@@ -199,11 +221,19 @@ img {
     /* align-items: center; */
 }
 
+.feature-cont-icon {
+    padding: 24px 100px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    /* width: 264px;
+    height: 112px; */
+    background-color: #f4f4fd;
+    margin-bottom: 8px;
+}
+
 .feature-item {
     width: calc((100% - 72px) /4);
 }
-
-
 
 .feature-title {
     font-weight: 500;
@@ -247,6 +277,7 @@ img {
     background-color: #fff;
     border-radius: 0 0 4px 4px;
     width: calc((100% - 72px) /4);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-item-container {
@@ -269,6 +300,33 @@ img {
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    margin-bottom: 8px;
+}
+
+.social-list {
+    display: flex;
+    justify-content: center;
+    column-gap: 24px;
+    margin: 0 auto;
+}
+
+.social-list-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+}
+
+.social-list-icon:hover,
+.social-list-icon:focus {
+    background-color: #404bbf;
+}
+
+.social-icon {
+    fill: #f4f4fd;
 }
 
 /* section3 Portfolio */
@@ -289,12 +347,27 @@ img {
     align-items: center;
     column-gap: 24px;
     row-gap: 48px;
-    flex-wrap: wrap
+    flex-wrap: wrap;
 }
+
+/* .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+} */
+
+/* .portfolio-item:hover,
+.portfolio-item:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background-color: #4d5ae5;
+} */
 
 .portfolio-item {
     /* background: #fff; */
     width: calc((100% - 48px) /3);
+    /* position: relative;
+    overflow: hidden; */
 }
 
 .portfolio-item-block {
@@ -315,7 +388,6 @@ img {
     /* padding-top: 32px; */
     /* padding-bottom: 8px;
     padding-left: 16px; */
-
 }
 
 .portfolio-text {
