--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,7 @@ img {
     justify-content: center;
     column-gap: 24px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .social-list-icon {
@@ -350,24 +351,38 @@ img {
     flex-wrap: wrap;
 }
 
-/* .overlay {
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateY(100%);
-} */
+    transform: translateY(150%);
+}
 
-/* .portfolio-item:hover,
+.overlay-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    padding-bottom: 164px;
+    background-color: #4d5ae5;
+}
+
+.portfolio-item:hover,
 .portfolio-item:focus {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background-color: #4d5ae5;
-} */
+}
+
+.portfolio-item:hover .overlay {
+    transform: translateY(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 .portfolio-item {
-    /* background: #fff; */
     width: calc((100% - 48px) /3);
-    /* position: relative;
-    overflow: hidden; */
+    overflow: hidden;
+    position: relative;
 }
 
 .portfolio-item-block {
@@ -422,4 +437,43 @@ img {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     width: 264px;
+}
+
+.footer-social-list-icon {
+    display: flex;
+    justify-content: center;
+    column-gap: 24px;
+    margin: 0 auto;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+}
+
+.footer-social-icon {
+    margin-left: 120px;
+    margin-right: auto;
+}
+
+.footer-cont {
+    display: flex;
+}
+
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-text-social {
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+}
+
+.footer-social-list-icon:hover,
+.footer-social-list-icon:focus {
+    background-color: #31D0AA;
 }
