--- a/css/styles.css
+++ b/css/styles.css
@@ -84,10 +84,6 @@ img {
     margin-right: 76px;
 }
 
-/* .footer-logo .logo-part {
-    color: #f4f4fd;
-} */
-
 .nav-list {
     display: flex;
     align-items: center;
@@ -169,7 +165,8 @@ img {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    /* min-width: 1440px; */
+    background-position: center;
+    max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -189,9 +186,7 @@ img {
     height: 56px;
     border: none;
     margin: 0 auto;
-    /* margin-right: auto;
-    margin-left: auto; */
-    /* min-width: 169px; */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
