--- a/css/styles.css
+++ b/css/styles.css
@@ -217,11 +217,13 @@ img {
 }
 
 .feature-cont-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 24px 100px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    /* width: 264px;
-    height: 112px; */
+    height: 112px;
     background-color: #f4f4fd;
     margin-bottom: 8px;
 }
@@ -276,7 +278,7 @@ img {
 }
 
 .team-item-container {
-    padding: 32px 16px;
+    padding: 32px 0px;
 }
 
 .team-title-name {
@@ -301,19 +303,28 @@ img {
 .social-list {
     display: flex;
     justify-content: center;
-    column-gap: 24px;
+    gap: 24px;
     margin: 0 auto;
     width: 100%;
+}
+
+.social-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
 }
 
 .social-list-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-icon:hover,
@@ -346,21 +357,19 @@ img {
     flex-wrap: wrap;
 }
 
-.overlay {
+.overlay-text {
     position: absolute;
     top: 0;
-    left: 0;
-    transform: translateY(150%);
-}
-
-.overlay-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     padding: 40px 32px;
-    padding-bottom: 164px;
     background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover,
@@ -368,16 +377,21 @@ img {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-item:hover .overlay {
+.portfolio-item:hover .overlay-text {
     transform: translateY(0);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .portfolio-item {
     width: calc((100% - 48px) /3);
     overflow: hidden;
     position: relative;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay {
+    position: relative;
+    overflow: hidden;
 }
 
 .portfolio-item-block {
@@ -426,6 +440,10 @@ img {
     display: inline-block;
 }
 
+.footer-logo-text {
+    margin-right: 120px;
+}
+
 .footer-text {
     font-size: 16px;
     line-height: 1.5;
@@ -447,12 +465,13 @@ img {
 }
 
 .footer-social-icon {
-    margin-left: 120px;
+    /* margin-left: 120px; */
     margin-right: auto;
 }
 
 .footer-cont {
     display: flex;
+    align-items: baseline;
 }
 
 .footer-social-list {
@@ -461,6 +480,7 @@ img {
 }
 
 .footer-text-social {
+    font-weight: 500;
     margin-bottom: 16px;
     font-size: 16px;
     line-height: 1.5;
