--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,6 @@ ol {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    /* margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0; */
 }
 
 a {
@@ -213,7 +210,6 @@ img {
 .feature-list {
     display: flex;
     gap: 24px;
-    /* align-items: center; */
 }
 
 .feature-cont-icon {
@@ -267,7 +263,6 @@ img {
 .team-list {
     display: flex;
     gap: 24px;
-    /* align-items: center; */
 }
 
 .team-item {
@@ -399,7 +394,6 @@ img {
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
     padding: 32px 16px;
-    /* padding-bottom: 48px; */
 }
 
 .portfolio-title {
@@ -409,9 +403,6 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-    /* padding-top: 32px; */
-    /* padding-bottom: 8px;
-    padding-left: 16px; */
 }
 
 .portfolio-text {
@@ -419,8 +410,6 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    /* padding-bottom: 32px; */
-    /* padding-left: 16px; */
 }
 
 /* Footer */
@@ -460,8 +449,16 @@ img {
     align-items: center;
     width: 40px;
     height: 40px;
+}
+
+.footer-social-link-icon {
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-color: #4d5ae5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-social-icon {
@@ -488,7 +485,7 @@ img {
     color: #fff;
 }
 
-.footer-social-list-icon:hover,
-.footer-social-list-icon:focus {
+.footer-social-link-icon:hover,
+.footer-social-link-icon:focus {
     background-color: #31D0AA;
 }
