--- a/css/styles.css
+++ b/css/styles.css
@@ -459,6 +459,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
