--- a/css/styles.css
+++ b/css/styles.css
@@ -459,7 +459,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
