--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 24px 100px;
+    /* padding: 24px 100px; */
     border: 1px solid #8e8f99;
     border-radius: 4px;
     height: 112px;
@@ -301,6 +301,8 @@ img {
     gap: 24px;
     margin: 0 auto;
     width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .social-item {
